Fix spacing outside html, bring map component into app, fixed horizontal view for map

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,21 +1,47 @@
 @import url("https://fonts.googleapis.com/css?family=Playfair+Display:700|Titillium+Web:600&display=swap");
+html {
+  overflow: hidden;
+  box-sizing: border-box;
+  height: 100%;
+}
 
 body {
   margin: 0;
   padding: 0;
   height: 100%;
+  overflow: hidden;
+  box-sizing: border-box;
+}
+
+#root {
+  height: 100%;
+  width: 100%;
 }
 
 .main {
-  height: 250vh;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+.container {
+  /* margin: 0;
+  padding: 0; */
+}
+
+.left-container {
+  max-width: 400px;
+  margin: 0;
+  box-sizing: border-box;
 }
 
 .map {
-  width: 82% !important;
+  width: 100%;
 }
 
 .map-container {
-  height: 200px;
+  height: 100%;
+  width: 100%;
 }
 
 .main-heading {
